# advent-of-code-2021

./: Cargo.toml  readme.md
.github/workflows/: CI.yml
benches/: day1.rs
solutions/: Cargo.toml
solutions/benches/: day1.rs
solutions/src/: day1.rs  day2.rs  lib.rs
src/: cli.rs  lib.rs  loader.rs  main.rs
src/solutions/: day1.rs  day2.rs  day3.rs  day4.rs  day6.rs  day7.rs
