[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.7", features = ["derive"] }
itertools = "0.10.3"
ndarray = "0.15.4"
paste = "1.0.6"
test-case = "1.2.1"


[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
paste = "1.0.6"

[[bench]]
name = "day1"
harness = false
