[package]
name = "solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
paste = "1.0.6"

[[bench]]
name = "day1"
harness = false
